--- a/cookie-settings/index.html
+++ b/cookie-settings/index.html
@@ -3,156 +3,151 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#0a3a21">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <title>Cookie Settings | Uberspinners</title>
-  <meta name="description" content="Manually manage your Uberspinners cookie preferences. Learn how to enable, disable, or delete analytics and advertising cookies.">
-  <meta property="og:site_name" content="Uberspinners">
-  <meta property="og:title" content="Cookie Settings | Uberspinners">
-  <meta property="og:description" content="Manage your Uberspinners cookie preferences.">
+  <meta name="theme-color" content="#f8cf5d">
+  <title>Cookie Settings | FortunePlay Fun</title>
+  <meta name="description" content="Control optional cookies and storage for FortunePlay Fun.">
+  <link rel="canonical" href="https://fortuneplay.fun/cookie-settings/">
+  <meta property="og:site_name" content="FortunePlay Fun">
+  <meta property="og:title" content="Cookie Settings | FortunePlay Fun">
+  <meta property="og:description" content="Toggle analytics or personalization cookies whenever you like.">
+  <meta property="og:url" content="https://fortuneplay.fun/cookie-settings/">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://uberspinners.com/cookie-settings/">
-  <meta property="og:image" content="https://uberspinners.com/public/images/uberspinners-hero.svg">
+  <meta property="og:image" content="https://fortuneplay.fun/public/images/shareimage.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Cookie Settings | Uberspinners">
-  <meta name="twitter:description" content="Manage your Uberspinners cookie preferences.">
-  <meta name="twitter:image" content="https://uberspinners.com/public/images/uberspinners-hero.svg">
-  <link rel="canonical" href="https://uberspinners.com/cookie-settings/">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="stylesheet" href="/styles.css?v=2">
+  <meta name="twitter:title" content="Cookie Settings | FortunePlay Fun">
+  <meta name="twitter:description" content="Manage cookies and local storage manually.">
+  <meta name="twitter:image" content="https://fortuneplay.fun/public/images/shareimage.webp">
+
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="stylesheet" href="/styles.css?v=3">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Skip to main content</a>
   <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="/">
-        <span class="brand-icon" aria-hidden="true">
-          <img src="/public/images/uberspinners-icon.svg" alt="" role="presentation">
-        </span>
-        <span class="brand-text">
-          <img src="/public/images/uberspinners-wordmark.svg" alt="Uberspinners">
-        </span>
+    <div class="shell header__inner">
+
+      <a class="brand" href="/" aria-label="FortunePlay Fun home">
+                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
+          <span aria-hidden='true'>fortuneplay.fun</span>
+        </div>
       </a>
+
       <nav class="site-nav" aria-label="Primary">
-        <a href="/" class="nav-link">Home</a>
-<a href="/leaderboard/" class="nav-link">Leaderboard</a>
-        <a href="/daily-bonus/" class="nav-link">Daily Bonus</a>
-        <a href="/frames/" class="nav-link">Frames</a>
-        <a href="/responsible-play/" class="nav-link">Responsible Play</a>
-        <a href="/contact/" class="nav-link">Contact</a>
+        <a href="/">Home</a>
+        <a href="/community/">Community</a>
+        <a href="/responsible-play/">Responsible Play</a>
+        <a href="/contact/">Contact</a>
       </nav>
     </div>
   </header>
 
   <main id="main-content">
-    <section class="surface">
-      <div class="container page-intro">
-        <h1>Cookie Settings</h1>
-        <p class="lead">
-          This static version of Uberspinners no longer stores cookie preferences in the browser.
-          Use the steps below to control optional cookies manually.
-        </p>
+    <section class="hero hero--sub">
+      <div class="shell hero__grid">
+        <div>
+          <p class="pill">Preferences</p>
+          <h1>Cookie settings.</h1>
+          <p>FortunePlay runs fine without optional cookies. Use this page to double-check what's stored locally.</p>
+        </div>
+        <div class="hero__card">
+          <h3>Current state</h3>
+          <p>Default = essential cookies only. Opt into analytics or personalization whenever you choose.</p>
+        </div>
       </div>
     </section>
 
-    <section class="container page-body">
-      <section>
-        <h2>Always-on cookies</h2>
-        <p>
-          Essential cookies keep the site secure and functional (for example, session management and load balancing).
-          They are strictly necessary and cannot be disabled.
-        </p>
-      </section>
-
-      <section class="callout">
-        <h2>Disable optional cookies</h2>
-        <ol class="ordered-list">
-          <li>Open your browser’s cookie controls (see the guides in our <a href="/cookie-policy/">Cookie Policy</a>).</li>
-          <li>Delete existing analytics or advertising cookies related to <strong>uberspinners.com</strong>.</li>
-          <li>Set preferences to block third-party or non-essential cookies going forward.</li>
-        </ol>
-        <p class="muted">
-          Because this site runs without client-side scripts, analytics and advertising cookies are now inactive by default. Blocking them ensures they remain disabled.
-        </p>
-      </section>
-
-      <section>
-        <h2>Request assistance</h2>
-        <p>
-          Need help clearing cookies or confirming your preferences? Email <a href="mailto:privacy@uberspinners.com">privacy@uberspinners.com</a>
-          and we will provide step-by-step guidance tailored to your browser.
-        </p>
-      </section>
+    <section class="section">
+      <div class="shell content-grid">
+        <article class="content-card">
+          <h2>Essentials (always on)</h2>
+          <p>Session ID, CSRF token, accessibility preferences, and consent log. Removing them logs you out.</p>
+        </article>
+        <article class="content-card">
+          <h2>Analytics toggle</h2>
+          <ol>
+            <li>Block <code>plausible.io</code> via your browser's content settings.</li>
+            <li>Delete the cookie named <strong>ez_analytics</strong>.</li>
+            <li>Reload the page to confirm the badge shows "Analytics off".</li>
+          </ol>
+        </article>
+        <article class="content-card">
+          <h2>Personalization toggle</h2>
+          <ol>
+            <li>Clear the <strong>ez_persona</strong> local-storage entry via developer tools.</li>
+            <li>Disable "Remember my frames" in profile settings.</li>
+            <li>Refresh to return to default themes.</li>
+          </ol>
+        </article>
+        <article class="content-card">
+          <h2>Need help?</h2>
+          <p>Email <a href="mailto:privacy@fortuneplay.fun">privacy@fortuneplay.fun</a> with your browser and OS. We'll send tailored steps within 24 hours.</p>
+        </article>
+      </div>
     </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="container footer-grid">
+  <footer class="footer">
+    <div class="shell footer__grid">
       <div>
-        <p class="footer-eyebrow">DIGIBOX LTD OOD</p>
-        <p class="footer-brand">Uberspinners</p>
-        <p class="muted">
-          A charming Irish social casino lounge where every rainbow ends in virtual gold. Earn daily clover drops,
-          unlock collectible frames, and chase leaderboard glory-never for cash, always for the thrill.
-        </p>
+
+      <a class="brand" href="/" aria-label="FortunePlay Fun home">
+                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
+          <span aria-hidden='true'>fortuneplay.fun</span>
+        </div>
+      </a>
+
+        <p>FortunePlay Fun keeps social casino nights calm, human, and quick to support.</p>
       </div>
       <div>
-        <h3>Services</h3>
-        <ul>
-<li><a href="/leaderboard/">Leaderboard</a></li>
-          <li><a href="/daily-bonus/">Daily Bonus</a></li>
-          <li><a href="/frames/">Frames</a></li>
-        </ul>
+        <small>Explore</small>
+        <p><a href="/how-it-works/">How it works</a><br>
+        <a href="/terms/">Terms</a><br>
+        <a href="/privacy/">Privacy</a><br>
+        <a href="/cookie-policy/">Cookie policy</a></p>
       </div>
       <div>
-        <h3>Company</h3>
-        <ul>
-          <li><a href="/responsible-play/">Responsible Play</a></li>
-          <li><a href="/how-it-works/">How It Works</a></li>
-          <li><a href="/community-guidelines/">Community Guidelines</a></li>
-          <li><a href="/accessibility/">Accessibility</a></li>
-        </ul>
-      </div>
-      <div>
-        <h3>Contact</h3>
-        <ul>
-          <li><a href="mailto:support@uberspinners.com">support@uberspinners.com</a></li>
-          <li>86 Ul. Oborishte str., R-N OBORISHTE DISTR., AP. 9, FLOOR 4</li>
-          <li>Sofia, 1505, Sofia-grad, Bulgaria</li>
-        </ul>
+        <small>Support</small>
+        <p><a href="/responsible-play/">Responsible play</a><br>
+        <a href="/data-rights/">Data rights</a><br>
+        <a href="/accessibility/">Accessibility</a><br>
+        <a href="/contact/">Contact</a><br>
+        <a href="/cookie-settings/">Cookie settings</a></p>
       </div>
     </div>
-
-    <div class="container footer-badges">
-      <p class="muted badge-note">Partner resources &amp; compliance</p>
-      <div class="badge-grid">
-        <img src="/public/images/footerimages/dmcaprotectionlogo2png-8hac.avif" alt="DMCA.com Protection Status">
-        <img src="/public/images/footerimages/gordonmoodywhitelogopng-xucr.avif" alt="Gordon Moody">
-        <img src="/public/images/footerimages/peluurifootpng-xfwq.avif" alt="Peluuri">
-        <img src="/public/images/footerimages/legalagepng-bzk2.avif" alt="18+ Age Restriction">
-        <img src="/public/images/footerimages/ecogra.svg" alt="eCOGRA">
-        <img src="/public/images/footerimages/gambleaware.svg" alt="GambleAware">
-        <img src="/public/images/footerimages/gamcare.svg" alt="GamCare">
-        <img src="/public/images/footerimages/ncpg.svg" alt="National Council on Problem Gambling">
-        <img src="/public/images/footerimages/sslsecure.svg" alt="SSL Secure">
-      </div>
-    </div>
-
-    <div class="container footer-bottom">
-      <p class="muted">© 2025 DIGIBOX LTD OOD · Uberspinners. All rights reserved.</p>
-      <nav aria-label="Legal" class="legal-links">
-        <a href="/terms/">Terms</a>
-        <a href="/privacy/">Privacy</a>
-        <a href="/cookie-policy/">Cookie Policy</a>
-        <a href="/cookie-settings/">Cookie Settings</a>
-        <a href="/data-rights/">Data Rights</a>
-        <a href="/contact/">Contact</a>
-      </nav>
+    <div class="shell footer__logos" aria-label="Safety and support partners">
+      <a href="https://www.dmca.com/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/dmcaprotectionlogo.webp" alt="DMCA.com protection status">
+      </a>
+      <a href="https://www.gordonmoody.org.uk/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/gordonmoodywhitelogo.webp" alt="Gordon Moody charity">
+      </a>
+      <a href="https://peluuri.fi/en/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/peluurifoot.webp" alt="Peluuri helpline">
+      </a>
     </div>
   </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
