--- a/daily-bonus/index.html
+++ b/daily-bonus/index.html
@@ -3,22 +3,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#0a3a21">
+    <meta name="theme-color" content="#ff8c5f">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <title>Daily Bonus | Uberspinners</title>
-  <meta name="description" content="Collect 1,000 coins every day and build streaks toward special keepsakes. The Uberspinners Daily Bonus is 100% virtual and always free.">
-  <meta property="og:site_name" content="Uberspinners">
-  <meta property="og:title" content="Daily Bonus | Uberspinners">
+  <title>Daily Bonus | FortunePlay</title>
+  <meta name="description" content="Collect 1,000 coins every day and build streaks toward special keepsakes. The FortunePlay Daily Bonus is 100% virtual and always free.">
+  <meta property="og:site_name" content="FortunePlay">
+  <meta property="og:title" content="Daily Bonus | FortunePlay">
   <meta property="og:description" content="Collect 1,000 coins daily and build streaks toward special keepsakes.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://uberspinners.com/daily-bonus/">
-  <meta property="og:image" content="https://uberspinners.com/public/images/uberspinners-hero.svg">
+  <meta property="og:url" content="https://fortuneplay.fun/daily-bonus/">
+  <meta property="og:image" content="https://fortuneplay.fun/public/images/shareimage.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Daily Bonus | Uberspinners">
+  <meta name="twitter:title" content="Daily Bonus | FortunePlay">
   <meta name="twitter:description" content="Collect 1,000 coins daily and build streaks toward special keepsakes.">
-  <meta name="twitter:image" content="https://uberspinners.com/public/images/uberspinners-hero.svg">
-  <link rel="canonical" href="https://uberspinners.com/daily-bonus/">
+  <meta name="twitter:image" content="https://fortuneplay.fun/public/images/shareimage.webp">
+  <link rel="canonical" href="https://fortuneplay.fun/daily-bonus/">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" href="/styles.css?v=2">
 </head>
@@ -28,10 +28,10 @@
     <div class="container header-inner">
       <a class="brand" href="/">
         <span class="brand-icon" aria-hidden="true">
-          <img src="/public/images/uberspinners-icon.svg" alt="" role="presentation">
+          <img src="/public/images/FortunePlay-icon.svg" alt="" role="presentation">
         </span>
         <span class="brand-text">
-          <img src="/public/images/uberspinners-wordmark.svg" alt="Uberspinners">
+          <img src="/public/images/FortunePlay-wordmark.svg" alt="FortunePlay">
         </span>
       </a>
       <nav class="site-nav" aria-label="Primary">
@@ -61,7 +61,7 @@
         <h2>How the bonus works</h2>
         <ol class="ordered-list">
           <li>Sign in to the lounge between 00:00 and 23:59 UTC.</li>
-          <li>Open the Daily Bonus card from the lobby and confirm “Claim clover drop”.</li>
+          <li>Open the Daily Bonus card from the lobby and confirm "Claim clover drop".</li>
           <li>Receive 1,000 clover coins instantly-no waiting, no ads.</li>
           <li>Repeat for ten consecutive days to earn a gilded horseshoe trophy.</li>
         </ol>
@@ -85,7 +85,7 @@
               <tr><td>1</td><td>1,000 clover coins</td><td>Welcome back clover drop</td></tr>
               <tr><td>2</td><td>1,000 clover coins</td><td>Unlocks streak halo glow</td></tr>
               <tr><td>3</td><td>1,000 clover coins</td><td>Qualifies for weekend rainbow quests</td></tr>
-              <tr><td>4</td><td>1,000 clover coins</td><td>Profile status: “On a roll”</td></tr>
+              <tr><td>4</td><td>1,000 clover coins</td><td>Profile status: "On a roll"</td></tr>
               <tr><td>5</td><td>1,000 clover coins</td><td>Leaderboard shamrock icon</td></tr>
               <tr><td>6</td><td>1,000 clover coins</td><td>Frame shard (emerald)</td></tr>
               <tr><td>7</td><td>1,000 clover coins</td><td>Community harp shout-out</td></tr>
@@ -120,7 +120,7 @@
           <li>A quick description of what you saw (e.g., blank screen, already claimed message)</li>
         </ul>
         <p>
-          Email <a href="mailto:support@uberspinners.com">support@uberspinners.com</a> with subject “Daily Bonus Support”.
+          Email <a href="mailto:support@fortuneplay.fun">support@fortuneplay.fun</a> with subject "Daily Bonus Support".
           Our moderation team resolves most requests within 12 hours.
         </p>
       </section>
@@ -131,7 +131,7 @@
     <div class="container footer-grid">
       <div>
         <p class="footer-eyebrow">DIGIBOX LTD OOD</p>
-        <p class="footer-brand">Uberspinners</p>
+        <p class="footer-brand">FortunePlay</p>
         <p class="muted">
           A charming Irish social casino lounge where every rainbow ends in virtual gold. Earn daily clover drops,
           unlock collectible frames, and chase leaderboard glory-never for cash, always for the thrill.
@@ -157,7 +157,7 @@
       <div>
         <h3>Contact</h3>
         <ul>
-          <li><a href="mailto:support@uberspinners.com">support@uberspinners.com</a></li>
+          <li><a href="mailto:support@fortuneplay.fun">support@fortuneplay.fun</a></li>
           <li>86 Ul. Oborishte str., R-N OBORISHTE DISTR., AP. 9, FLOOR 4</li>
           <li>Sofia, 1505, Sofia-grad, Bulgaria</li>
         </ul>
@@ -167,20 +167,14 @@
     <div class="container footer-badges">
       <p class="muted badge-note">Partner resources &amp; compliance</p>
       <div class="badge-grid">
-        <img src="/public/images/footerimages/dmcaprotectionlogo2png-8hac.avif" alt="DMCA.com Protection Status">
-        <img src="/public/images/footerimages/gordonmoodywhitelogopng-xucr.avif" alt="Gordon Moody">
-        <img src="/public/images/footerimages/peluurifootpng-xfwq.avif" alt="Peluuri">
-        <img src="/public/images/footerimages/legalagepng-bzk2.avif" alt="18+ Age Restriction">
-        <img src="/public/images/footerimages/ecogra.svg" alt="eCOGRA">
-        <img src="/public/images/footerimages/gambleaware.svg" alt="GambleAware">
-        <img src="/public/images/footerimages/gamcare.svg" alt="GamCare">
-        <img src="/public/images/footerimages/ncpg.svg" alt="National Council on Problem Gambling">
-        <img src="/public/images/footerimages/sslsecure.svg" alt="SSL Secure">
+        <img src="/public/images/footerimages/dmcaprotectionlogo.webp" alt="DMCA.com protection status">
+        <img src="/public/images/footerimages/gordonmoodywhitelogo.webp" alt="Gordon Moody charity">
+        <img src="/public/images/footerimages/peluurifoot.webp" alt="Peluuri helpline">
       </div>
     </div>
 
     <div class="container footer-bottom">
-      <p class="muted">© 2025 DIGIBOX LTD OOD · Uberspinners. All rights reserved.</p>
+      <p class="muted">© 2025 DIGIBOX LTD OOD · FortunePlay. All rights reserved.</p>
       <nav aria-label="Legal" class="legal-links">
         <a href="/terms/">Terms</a>
         <a href="/privacy/">Privacy</a>
@@ -193,6 +187,21 @@
   </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
