--- a/data-rights/index.html
+++ b/data-rights/index.html
@@ -3,221 +3,180 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#0a3a21">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <title>Your Data Rights | Uberspinners</title>
-  <meta name="description" content="Learn how to exercise your GDPR and CPRA data protection rights with Uberspinners. Request access, deletion, portability, and more.">
-  <meta property="og:site_name" content="Uberspinners">
-  <meta property="og:title" content="Your Data Rights | Uberspinners">
-  <meta property="og:description" content="Learn how to exercise your GDPR and CPRA data protection rights with Uberspinners.">
+  <meta name="theme-color" content="#f8cf5d">
+  <title>Data Rights | FortunePlay Fun</title>
+  <meta name="description" content="Learn how to exercise GDPR and CPRA rights with FortunePlay Fun, access, deletion, portability, and more in one place.">
+  <link rel="canonical" href="https://fortuneplay.fun/data-rights/">
+  <meta property="og:site_name" content="FortunePlay Fun">
+  <meta property="og:title" content="Data Rights | FortunePlay Fun">
+  <meta property="og:description" content="Request or delete your data, opt out of signals, and reach our privacy team directly.">
+  <meta property="og:url" content="https://fortuneplay.fun/data-rights/">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://uberspinners.com/data-rights/">
-  <meta property="og:image" content="https://uberspinners.com/public/images/uberspinners-hero.svg">
+  <meta property="og:image" content="https://fortuneplay.fun/public/images/shareimage.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Your Data Rights | Uberspinners">
-  <meta name="twitter:description" content="Learn how to exercise your GDPR and CPRA data protection rights with Uberspinners.">
-  <meta name="twitter:image" content="https://uberspinners.com/public/images/uberspinners-hero.svg">
-  <link rel="canonical" href="https://uberspinners.com/data-rights/">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="stylesheet" href="/styles.css?v=2">
+  <meta name="twitter:title" content="Data Rights | FortunePlay Fun">
+  <meta name="twitter:description" content="FortunePlay honors GDPR + CPRA. Here is the guide to every right and how to submit a request.">
+  <meta name="twitter:image" content="https://fortuneplay.fun/public/images/shareimage.webp">
+
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="stylesheet" href="/styles.css?v=3">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Skip to main content</a>
   <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="/">
-        <span class="brand-icon" aria-hidden="true">
-          <img src="/public/images/uberspinners-icon.svg" alt="" role="presentation">
-        </span>
-        <span class="brand-text">
-          <img src="/public/images/uberspinners-wordmark.svg" alt="Uberspinners">
-        </span>
+    <div class="shell header__inner">
+
+      <a class="brand" href="/" aria-label="FortunePlay Fun home">
+                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
+          <span aria-hidden='true'>fortuneplay.fun</span>
+        </div>
       </a>
+
       <nav class="site-nav" aria-label="Primary">
-        <a href="/" class="nav-link">Home</a>
-<a href="/leaderboard/" class="nav-link">Leaderboard</a>
-        <a href="/daily-bonus/" class="nav-link">Daily Bonus</a>
-        <a href="/frames/" class="nav-link">Frames</a>
-        <a href="/responsible-play/" class="nav-link">Responsible Play</a>
-        <a href="/contact/" class="nav-link">Contact</a>
+        <a href="/">Home</a>
+        <a href="/community/">Community</a>
+        <a href="/responsible-play/">Responsible Play</a>
+        <a href="/contact/">Contact</a>
       </nav>
     </div>
   </header>
 
   <main id="main-content">
-    <section class="surface">
-      <div class="container page-intro">
-        <h1>Your Data Rights</h1>
-        <p class="lead">
-          Uberspinners respects privacy obligations under the General Data Protection Regulation (GDPR) and
-          the California Privacy Rights Act (CPRA). Use this page to understand and exercise your rights.
-        </p>
+    <section class="hero hero--sub">
+      <div class="shell hero__grid">
+        <div>
+          <p class="pill">Privacy & trust</p>
+          <h1>Your FortunePlay data rights.</h1>
+          <p>FortunePlay Fun complies with GDPR, UK GDPR, and CPRA. This guide explains each right and how to request it without friction.</p>
+        </div>
+        <div class="hero__card">
+          <h3>Need a fast response?</h3>
+          <p>Email <a href="mailto:privacy@fortuneplay.fun">privacy@fortuneplay.fun</a> from the address tied to your lounge pass. We verify and respond within 30 days.</p>
+          <p>Urgent or sensitive? Add "PRIORITY" to the subject line and we'll reply within 72 hours.</p>
+        </div>
       </div>
     </section>
 
-    <section class="container page-body">
-      <section>
-        <h2>Rights for EEA/UK guests (GDPR)</h2>
-        <div class="feature-stack">
-          <article>
-            <h3>Access</h3>
-            <p>Request a copy of the personal data we hold about you, along with details about how we process it.</p>
-          </article>
-          <article>
-            <h3>Rectification</h3>
-            <p>Ask us to correct inaccurate or incomplete information on your account.</p>
-          </article>
-          <article>
-            <h3>Erasure</h3>
-            <p>Request deletion of your data when it is no longer needed or when you withdraw consent.</p>
-          </article>
-          <article>
-            <h3>Portability</h3>
-            <p>Receive your data in a structured, machine-readable format to transfer to another service.</p>
-          </article>
-          <article>
-            <h3>Restriction &amp; Objection</h3>
-            <p>Limit certain processing activities or object to use of your data, including for direct marketing.</p>
-          </article>
-          <article>
-            <h3>Automated decisions</h3>
-            <p>We do not run automated decision-making that produces legal or significant effects without human review.</p>
-          </article>
-        </div>
-      </section>
-
-      <section>
-        <h2>Rights for California residents (CPRA)</h2>
-        <div class="feature-stack">
-          <article>
-            <h3>Know &amp; access</h3>
-            <p>Request disclosure of the categories and specific pieces of personal information collected in the preceding 12 months.</p>
-          </article>
-          <article>
-            <h3>Deletion</h3>
-            <p>Ask us to delete personal information, subject to limited exceptions (security, legal obligations, fraud prevention).</p>
-          </article>
-          <article>
-            <h3>Correction</h3>
-            <p>Request that inaccurate personal information about you be corrected.</p>
-          </article>
-          <article>
-            <h3>Opt-out</h3>
-            <p>Uberspinners does not sell or share personal data for cross-context behavioural advertising.</p>
-          </article>
-          <article>
-            <h3>Limit use of sensitive data</h3>
-            <p>We only process limited account identifiers necessary to provide the lounge-no biometric or precise geolocation data is collected.</p>
-          </article>
-          <article>
-            <h3>Non-discrimination</h3>
-            <p>We will never deny services, charge different prices, or provide lesser quality if you exercise your rights.</p>
-          </article>
-        </div>
-      </section>
-
-      <section class="callout">
-        <h2>How to submit a request</h2>
-        <ul class="checklist">
-          <li>Email <a href="mailto:privacy@uberspinners.com">privacy@uberspinners.com</a> from the address associated with your lounge pass.</li>
-          <li>Include the right you wish to exercise (access, deletion, correction, etc.) and any relevant details.</li>
-          <li>We may ask for additional verification to protect your account. Verified requests receive a response within 30 days (45 days for complex cases).</li>
-        </ul>
-        <p class="muted">
-          Prefer not to email? Use the <a href="/contact/">contact page</a> and select “Data Rights” in your message.
-        </p>
-      </section>
-
-      <section>
-        <h2>Supervisory authorities</h2>
-        <p>
-          If you are dissatisfied with our response, you may lodge a complaint with your local data protection
-          authority. EU residents can locate their authority at
-          <a href="https://edpb.europa.eu/about-edpb/board/members_en">edpb.europa.eu</a>. California residents may contact
-          the California Privacy Protection Agency (<a href="https://cppa.ca.gov/">cppa.ca.gov</a>).
-        </p>
-      </section>
-
-      <section>
-        <h2>Contact our privacy team</h2>
-        <p>
-          Data Protection Officer enquiries: <a href="mailto:privacy@uberspinners.com">privacy@uberspinners.com</a>.
-          Please allow up to 30 days for a formal response after verification.
-        </p>
-        <p class="muted">
-          This notice was last updated October 27, 2025. We will update this page whenever privacy regulations or our practices change.
-        </p>
-      </section>
+    <section class="section">
+      <div class="shell content-grid">
+        <article class="content-card content-card--wide">
+          <h2>GDPR + UK GDPR rights</h2>
+          <dl>
+            <dt>Access</dt>
+            <dd>Receive a copy of the personal data we store along with processing details.</dd>
+            <dt>Rectification</dt>
+            <dd>Correct inaccurate profile or gameplay information.</dd>
+            <dt>Erasure</dt>
+            <dd>Delete your account and data where no legal obligation requires retention.</dd>
+            <dt>Portability</dt>
+            <dd>Obtain data in a portable, machine-readable format.</dd>
+            <dt>Restriction & objection</dt>
+            <dd>Pause certain processing or object to uses like marketing.</dd>
+            <dt>Automated decisions</dt>
+            <dd>We do not perform automated decision-making that has legal or similar significant effects.</dd>
+          </dl>
+        </article>
+        <article class="content-card content-card--wide">
+          <h2>CPRA rights</h2>
+          <dl>
+            <dt>Know</dt>
+            <dd>Learn what categories and specific pieces of data we collected in the past 12 months.</dd>
+            <dt>Delete</dt>
+            <dd>Ask us to delete personal information, subject to security or legal exemptions.</dd>
+            <dt>Correct</dt>
+            <dd>Request updates when details are inaccurate.</dd>
+            <dt>Opt out</dt>
+            <dd>We do not sell personal information. You may still opt out of analytics sharing.</dd>
+            <dt>Limit</dt>
+            <dd>Control the use of sensitive personal information.</dd>
+          </dl>
+        </article>
+        <article class="content-card">
+          <h3>How to submit</h3>
+          <ol>
+            <li>Contact <a href="mailto:privacy@fortuneplay.fun">privacy@fortuneplay.fun</a> or use the <a href="/contact/">contact form</a>.</li>
+            <li>Share your username, jurisdiction, and the right you wish to exercise.</li>
+            <li>We send a verification link to confirm the request before starting work.</li>
+          </ol>
+        </article>
+        <article class="content-card">
+          <h3>Verification & timeline</h3>
+          <p>We verify identity via registered email plus one gameplay detail. Standard responses ship within 30 days. Complex requests extend to 60 days with notice.</p>
+        </article>
+        <article class="content-card">
+          <h3>Appeals & regulators</h3>
+          <p>Unsatisfied? Email <a href="mailto:privacy@fortuneplay.fun">privacy@fortuneplay.fun</a> with "Appeal" in the subject. You may also contact your local supervisory authority or the California Privacy Protection Agency.</p>
+        </article>
+        <article class="content-card">
+          <h3>Latest update</h3>
+          <p>This notice was refreshed November 2025. We post changes here whenever we add new data flows.</p>
+        </article>
+      </div>
     </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="container footer-grid">
+  <footer class="footer">
+    <div class="shell footer__grid">
       <div>
-        <p class="footer-eyebrow">DIGIBOX LTD OOD</p>
-        <p class="footer-brand">Uberspinners</p>
-        <p class="muted">
-          A charming Irish social casino lounge where every rainbow ends in virtual gold. Earn daily clover drops,
-          unlock collectible frames, and chase leaderboard glory-never for cash, always for the thrill.
-        </p>
+
+      <a class="brand" href="/" aria-label="FortunePlay Fun home">
+                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
+          <span aria-hidden='true'>fortuneplay.fun</span>
+        </div>
+      </a>
+
+        <p>FortunePlay Fun keeps social casino nights calm, human, and quick to support.</p>
       </div>
       <div>
-        <h3>Services</h3>
-        <ul>
-<li><a href="/leaderboard/">Leaderboard</a></li>
-          <li><a href="/daily-bonus/">Daily Bonus</a></li>
-          <li><a href="/frames/">Frames</a></li>
-        </ul>
+        <small>Explore</small>
+        <p><a href="/how-it-works/">How it works</a><br>
+        <a href="/terms/">Terms</a><br>
+        <a href="/privacy/">Privacy</a><br>
+        <a href="/cookie-policy/">Cookie policy</a></p>
       </div>
       <div>
-        <h3>Company</h3>
-        <ul>
-          <li><a href="/responsible-play/">Responsible Play</a></li>
-          <li><a href="/how-it-works/">How It Works</a></li>
-          <li><a href="/community-guidelines/">Community Guidelines</a></li>
-          <li><a href="/accessibility/">Accessibility</a></li>
-        </ul>
-      </div>
-      <div>
-        <h3>Contact</h3>
-        <ul>
-          <li><a href="mailto:support@uberspinners.com">support@uberspinners.com</a></li>
-          <li>86 Ul. Oborishte str., R-N OBORISHTE DISTR., AP. 9, FLOOR 4</li>
-          <li>Sofia, 1505, Sofia-grad, Bulgaria</li>
-        </ul>
+        <small>Support</small>
+        <p><a href="/responsible-play/">Responsible play</a><br>
+        <a href="/data-rights/">Data rights</a><br>
+        <a href="/accessibility/">Accessibility</a><br>
+        <a href="/contact/">Contact</a><br>
+        <a href="/cookie-settings/">Cookie settings</a></p>
       </div>
     </div>
-
-    <div class="container footer-badges">
-      <p class="muted badge-note">Partner resources &amp; compliance</p>
-      <div class="badge-grid">
-        <img src="/public/images/footerimages/dmcaprotectionlogo2png-8hac.avif" alt="DMCA.com Protection Status">
-        <img src="/public/images/footerimages/gordonmoodywhitelogopng-xucr.avif" alt="Gordon Moody">
-        <img src="/public/images/footerimages/peluurifootpng-xfwq.avif" alt="Peluuri">
-        <img src="/public/images/footerimages/legalagepng-bzk2.avif" alt="18+ Age Restriction">
-        <img src="/public/images/footerimages/ecogra.svg" alt="eCOGRA">
-        <img src="/public/images/footerimages/gambleaware.svg" alt="GambleAware">
-        <img src="/public/images/footerimages/gamcare.svg" alt="GamCare">
-        <img src="/public/images/footerimages/ncpg.svg" alt="National Council on Problem Gambling">
-        <img src="/public/images/footerimages/sslsecure.svg" alt="SSL Secure">
-      </div>
-    </div>
-
-    <div class="container footer-bottom">
-      <p class="muted">© 2025 DIGIBOX LTD OOD · Uberspinners. All rights reserved.</p>
-      <nav aria-label="Legal" class="legal-links">
-        <a href="/terms/">Terms</a>
-        <a href="/privacy/">Privacy</a>
-        <a href="/cookie-policy/">Cookie Policy</a>
-        <a href="/cookie-settings/">Cookie Settings</a>
-        <a href="/data-rights/">Data Rights</a>
-        <a href="/contact/">Contact</a>
-      </nav>
+    <div class="shell footer__logos" aria-label="Safety and support partners">
+      <a href="https://www.dmca.com/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/dmcaprotectionlogo.webp" alt="DMCA.com protection status">
+      </a>
+      <a href="https://www.gordonmoody.org.uk/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/gordonmoodywhitelogo.webp" alt="Gordon Moody charity">
+      </a>
+      <a href="https://peluuri.fi/en/" target="_blank" rel="noopener nofollow">
+        <img src="/public/images/footerimages/peluurifoot.webp" alt="Peluuri helpline">
+      </a>
     </div>
   </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
